--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/>
-    <title>React App</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <title>Charts</title>
     <link href="/static/css/main.0c937116.chunk.css" rel="stylesheet">
 </head>
 <body>
